# Course-Registration-System

./: .gitignore  BGRSclient  Courses.txt  README.md
BGRsclient/: CMakeLists.txt  makefile
BGRsclient/include/: KeyboardReader.h  SocketReader.h
BGRsclient/src/: Client.cpp  KeyboardReader.cpp  SocketReader.cpp
Client/: makefile
Client/include/: KeyboardReader.h
Client/src/: Client.cpp  KeyboardReader.cpp  SocketReader.cpp
spl-net/src/main/java/bgu/spl/net/api/: Database.java  Message.java  MessageEncoderDecoderImpl.java  MessagingProtocolImpl.java
spl-net/src/main/java/bgu/spl/net/api/Messages/: AckMessage.java  AdminRegMessage.java  CourseRegMessage.java  CourseStatMessage.java  ErrorMessage.java  IsRegisteredMessage.java  KdamCheckMessage.java  LoginMessage.java  LogoutMessage.java  MyCoursesMessage.java  ServerToClientMessage.java  StudentRegMessage.java  StudentStatMessage.java  UnregisterMessage.java
spl-net/src/main/java/bgu/spl/net/impl/BGRSServer/: MessageEncoderDecoderImpl.java  MessagingProtocolImpl.java  ReactorMain.java  TPCMain.java
spl-net/src/main/java/bgu/spl/net/impl/BGRSServer/Tester/: RunClientTests.java  Tests.java
spl-net/src/main/java/bgu/spl/net/impl/RegistrationSystem/: Admin.java  Course.java  Database.java  Session.java  Student.java  User.java
